fixed collection message not showing properly

--- a/src/Components/Collection/Collection.css
+++ b/src/Components/Collection/Collection.css
@@ -31,5 +31,9 @@
 
 #empty {
     font-size: 25pt;
-    display: none !important; 
+}
+
+#hide {
+    display: none !important;
+    font-size: 25pt;
 }
